# unipp

./: .bash_history  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CharSet.cmake
example/: CMakeLists.txt
example/src/: example_basic.hpp  example_char_view.hpp  example_iterator.hpp  example_win32.hpp  main.cpp
unipp/: CMakeLists.txt
unipp/include/unipp/: char_facts.hpp  char_view.hpp  code_point.hpp  codepoint.hpp  convert.hpp  iterator.hpp  pch.hpp  write_char.hpp
